--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p><a href="Link" class="download">Download Excursion (Coming Soon)</a></p>
 
     <div>
-      <video class="video" width="320" height="240" controls>
+      <video autoplay muted loop>
       <source src="resources/videos/excursion.mp4" type="video/mp4">
       </video>
     </div>
@@ -20,6 +20,7 @@
     <div class="image">
       <img src="resources/images/camp.jpg" alt="Image of Campsite">
     </div>
+  </br>
     <div class="image">
       <img src="resources/images/phone.png" alt="Cellphone Icon">
     </div>
