--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
     </div>
     <h2>Coming Soon for iPhone and Android</h2>
     <p><a href="Link" class="download">Download Excursion (Coming Soon)</a></p>
+
+    <div class="footer">
+      <p>© Excursion</p>
+    </div>
+    
   </body>
 </html>
