--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <h2>Coming Soon for iPhone and Android</h2>
     <p><a href="Link" class="download">Download Excursion (Coming Soon)</a></p>
 
-    <div class="footer">
-      <p>© Excursion</p>
+    <div>
+      <p class="footer">© Excursion</p>
     </div>
-    
+
   </body>
 </html>
